# Costguard

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  ROADMAP.md  SLACK_SETUP.md  debug_env.py  debug_startup_imports.py  debug_startup_imports_v2.py  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  test.yml  ui-ci.yml
agents/: README.md  __init__.py  handlers.py  runner.py
agents/analyst/: config.yaml
agents/communicator/: config.yaml
agents/detective/: config.yaml
agents/executor/: config.yaml
agents/optimizer/: config.yaml
backend/: Dockerfile  IMPLEMENTATION_PLAN.md  README.md  alembic.ini  entrypoint.sh  requirements.txt  run_tests.sh  seed_db.py  team-A-backend.md
backend/alembic/: env.py
backend/api/: main.py
backend/database/: base.py
backend/models/: models.py
backend/services/: integration.py  slack.py  (+1 more)
docker/: ui-compose.yml
docs/: ARCHESTRA_INTEGRATION.md  CHECKLIST_DOCKER.md  WORKFLOW_FLOWCHART.md  team-B-providers.md  team-C-ui-ci.md
scripts/: add_dynamic_anomaly.py  check_db_state.py  check_db_stats.py  clean_start_archestra.bat  deploy_archestra.sh  diag_archestra_auth.py  diag_scan.py  diagnose_db.py  init_db_manual.py  register_workflows.py  seed_demo_data.py  seed_test_anomalies.py  setup.bat  setup.sh  simulate_anomaly.py  start_archestra.bat  start_costguard.bat  test_500_error.py  test_endpoints.py  test_integration.py  verify_db.py
shared/: config.py  logger.py  types.py
ui/: Dockerfile  README.md  dashboard.py
workflows/: approval-flow.yaml  cost-monitoring.yaml  optimization.yaml
(+24 files in other folders)
